2000-10-30  Brent Welch <welch@ajubasolutions.com>

	* lib/pkgIndex.tcl:  Fixed quoting issue when you have
	installed TclHttpd under "Program Files".

2000-10-26  Brent Welch <welch@ajubasolutions.com>

	* lib/cgi.tcl:  fixed POST data handling in light of the
	-readpost change to Url and Httpd.
	* lib/counter.tcl: Explicitly initialize cgihits counter
	* lib/version.tcl: Changed version to 3.2.1

2000-10-20  Brent Welch <welch@ajubasolutions.com>
    
	* DIST_build/Makefile.boot: Fixed installation of Tcllib
	* bin/httpdthread.tcl:
	* bin/httpd.tcl: Fixed counter initialization for threaded case.
	* lib/counter.tcl: Fixed broken counter initialization
	* lib/httpd.tcl: Removed Counter_Reset call as it gets in
	the way of counter initialization.
	* lib/status.tcl: Removed 0-valued counters from table display.
	* Tagged and released 3.2

2000-10-19  Brent Welch <welch@ajubasolutions.com>
    
	* bin/httpd.tcl: Fixed error handling around SSL startup.
	* lib/httpd.tcl: Fixed Httpd_Suspend/Httpd_Resume usage that
	was added to Httpd_ReadPostDataAsync (The Httpd_Resume was omitted)

2000-10-12  Brent Welch <welch@ajubasolutions.com>
    
	* lib/httpd.tcl: Added Httpd_ReadPostDataAsync that is
	a thin layer over Httpd_GetPostDataAsync
	* lib/url.tcl: Added the -readpost option to Url_PrefixInstall.
	This option is actually *on* by default and it causes TclHttpd
	to read all the post data using Httpd_GetPostDataAsync before
	dispatching to the Url domain implementation.

2000-10-09  Brent Welch <welch@ajubasolutions.com>
    
	* lib/direct.tcl: Fixed parameter passing when there are multiple
	values from a form element (e.g., checkbox).  The switch to ncgi::
	had resulted in dropping the extra values - this is fixed.
	Nuked Count call with incorrect prefix.  Domain hits
	are already being counted by the Url module.
	* lib/httpd.tcl: Changed order so Log comes before HttpdDoCallback.

2000-10-04  Brent Welch <welch@ajubasolutions.com>
    