@@ -21,7 +21,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: httpd.tcl,v 1.66 2000/10/20 17:51:26 welch Exp $
+# RCS: @(#) $Id: httpd.tcl,v 1.67 2000/11/14 00:59:34 welch Exp $
 
 package provide httpd 1.5
 
@@ -1716,7 +1716,9 @@ proc HttpdCloseFinal {sock {errmsg {}}} {
 	}
     }
     HttpdDoCallback $sock $errmsg
-    unset data
+    if {[info exist data]} {
+	unset data
+    }
 }
 
 # Httpd_RequestComplete --
